--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -4,11 +4,11 @@ interval=60
 format=json
 color=#FFC671
 
-[disk]
-command=/home/vbmacher/bin/i3blocks/disk
-label=/home 
-dir=/home
-interval=30
+#[disk]
+#command=/home/vbmacher/bin/i3blocks/disk
+#label=/home 
+#dir=/home
+#interval=30
 
 [disk2]
 command=/home/vbmacher/bin/i3blocks/disk
@@ -27,7 +27,7 @@ label=CPU
 
 [memory]
 command=/home/vbmacher/bin/i3blocks/memory
-label=MEM
+label=MEM 
 interval=30
 
 [bandwidth]
@@ -82,18 +82,17 @@ command=curl -Ss 'https://wttr.in?0&T&Q' | cut -c 16- | head -2 | xargs echo
 interval=3600
 color=#A4C2F4
 
-[time]
-command=/home/vbmacher/bin/i3blocks/time
-interval=1
-#TZ_FILE=~/.tz
-STRFTIME_FORMAT=%H:%M
-TZONES=$DEFAULT_TZ,Europe/Prague
-TZ_LABELS=,Europe,EU
-
-
 [rofi-calendar]
 command=/home/vbmacher/bin/i3blocks/rofi-calendar
 interval=3600
 LABEL= 
 #DATEFTM=+%a. %d. %b. %Y
 #SHORTFTM=+%d.%m.%Y
+
+[time]
+command=/home/vbmacher/bin/i3blocks/time
+interval=1
+#TZ_FILE=~/.tz
+STRFTIME_FORMAT=%H:%M
+#TZONES=$DEFAULT_TZ,Europe/Prague
+#TZ_LABELS=,Europe,EU
