--- a/bigpc/.i3blocks.conf
+++ b/bigpc/.i3blocks.conf
@@ -1,25 +1,25 @@
-[gcalcli]
-command=/home/vbmacher/bin/i3blocks/gcalcli-i3blocks.py
-interval=60
-format=json
-color=#FFC671
+#[gcalcli]
+#command=/home/vbmacher/bin/i3blocks/gcalcli-i3blocks.py
+#interval=60
+#format=json
+#color=#FFC671
 
 #[disk]
 #command=/home/vbmacher/bin/i3blocks/disk
-#label=/home 
+#label=/home
 #dir=/home
 #interval=30
 
 [disk2]
 command=/home/vbmacher/bin/i3blocks/disk
-label=/ 
+label=/
 dir=/
 interval=30
 
 [cpu_usage]
 command=/home/vbmacher/bin/i3blocks/cpu_usage
 interval=10
-label=CPU 
+label=CPU
 #min_width=CPU: 100.00%
 #T_WARN=50
 #T_CRIT=80
@@ -27,7 +27,7 @@ label=CPU
 
 [memory]
 command=/home/vbmacher/bin/i3blocks/memory
-label=MEM 
+label=MEM
 interval=30
 
 [bandwidth]
@@ -35,7 +35,7 @@ command=/home/vbmacher/bin/i3blocks/bandwidth2
 interval=5
 #INTERFACE=eth0
 INLABEL=
-OUTLABEL= 
+OUTLABEL=
 #TREAT_UNKNOWN_AS_UP=0
 
 #[bandwidth]
@@ -69,7 +69,7 @@ interval=60
 
 [volume]
 command=/home/vbmacher/bin/i3blocks/volume
-label=♪ 
+label=♪
 interval=once
 signal=11
 #STEP=5%
@@ -85,7 +85,7 @@ color=#A4C2F4
 [rofi-calendar]
 command=/home/vbmacher/bin/i3blocks/rofi-calendar
 interval=3600
-LABEL= 
+LABEL=
 #DATEFTM=+%a. %d. %b. %Y
 #SHORTFTM=+%d.%m.%Y
 
