--- a/bigpc/.i3/config
+++ b/bigpc/.i3/config
@@ -10,7 +10,7 @@
 set $mod Mod4
 set $mod1 Mod1
 
-# Set your termina
+# Set your terminal
 set $terminal urxvt
 
 ### VISUAL
@@ -207,15 +207,17 @@ bindsym XF86MonBrightnessUp exec light -A 5    # increase screen brightness
 bindsym XF86MonBrightnessDown exec light -U 5  # decrease screen brightness
 
 # screenshot
-bindsym --release Print exec --no-startup-id "maim -p 0 -c 0.96,0.5,0.09 $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
-bindsym --release Shift+Print exec --no-startup-id "maim -s -p 0 -c 0.96,0.5,0.09 $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
+bindsym --release Print exec --no-startup-id "maim -p 0 -c 0.96,0.5,0.09 $HOME/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
+bindsym --release Shift+Print exec --no-startup-id "maim -s -p 0 -c 0.96,0.5,0.09 $HOME/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
 
 ### STARTUP
 exec --no-startup-id mpd  
-exec_always feh --bg-scale ~/tmp/mountains_lake_sky_overcast_114746_2560x1600.jpg
-exec --no-startup-id /usr/lib/gsd-xsettings
+#exec_always feh --bg-scale ~/tmp/mountains_lake_sky_overcast_114746_2560x1600.jpg
 exec --no-startup-id xrdb -merge -I$HOME ~/.Xdefaults
 exec --no-startup-id nm-applet
+exec --no-startup-id setxkbmap us,sk -option 'grp:alt_shift_toggle'
+exec --no-startup-id solaar
+exec --no-startup-id pasystray
 
 #input type:keyboard { 
 #    xkb_layout us,sk
@@ -229,15 +231,18 @@ exec --no-startup-id nm-applet
 # Check class by : xprop
 # swaymsg -t get_tree
 assign [class="jetbrains-idea"] $ws1
+
 assign [class="Google-chrome"] $ws2
 assign [class="Firefox"] $ws2
+assign [window_role="browser"] $ws2
+assign [class="brave-browser"] $ws2
+
 assign [class="Skype"] $ws4
 assign [window_role="browser-window"] $ws4
 assign [class="whatsdesk"] $ws4
 assign [class="slack"] $ws4
 assign [class="Slack"] $ws4
 #assign [class="URxvt"] $ws3
-assign [window_role="browser"] $ws2
 
 
 # Floating windows
@@ -245,6 +250,7 @@ for_window [window_role="pop-up"] floating enable
 for_window [window_role="bubble"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [window_role="Preferences"] floating enable
+for_window [title="(?i)solaar*"] floating enable
 
 for_window [window_role="task_dialog|bubble|page-info|Preferences|pop-up"] floating enable
 for_window [window_role="Open Files"] floating enable sticky
@@ -256,6 +262,7 @@ for_window [class="mtp-ng-qt" window_role="Open"] floating enable
 for_window [window_type="dialog"] floating enable
 for_window [window_type="menu"] floating enable
 #for_window [class="VirtualBox"] floating enable
+for_window [class="chromium" instance="chromium"] border none
 
 # Sticky window
 for_window [instance="file_progress"]  sticky enable
@@ -267,8 +274,8 @@ for_window [class="TeamViewer"] floating enable
 #for_window [instance="Qt-subapplication" title="TeamViewer"] move scratchpad
 
 # Focus window settings
+workspace_auto_back_and_forth yes
 no_focus [window_role="pop-up"]
-focus_on_window_activation focus 
+force_display_urgency_hint 0 ms
+focus_on_window_activation urgent
 #for_window [class="(?i)"] focus 
-
-for_window [class="chromium" instance="chromium"] border none
